[package]
name = "crypt3"
version = "0.1.0"

readme = "README.md"
license = "MIT"
keywords = ["password", "hash", "hashing", "crypt"]
categories = ["cryptography", "authentication"]
edition = "2024"

[features]
default = ["apr1", "bcrypt", "bsdi", "md5", "sha1", "sha2", "unix"]
apr1    = ["md5", "dep:md-5"]
bcrypt  = ["dep:blowfish", "dep:byteorder"]
bsdi    = []
md5     = ["dep:md-5"]
sha1    = ["dep:hmac", "dep:sha1"]
sha2    = ["dep:sha2"]
unix    = []

[dependencies]
md-5 = { version = "0.10.6", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
blowfish = { version = "0.9.1", features = ["bcrypt"], optional = true }
hmac = { version = "0.12.1", optional = true }
byteorder = { version = "1.5.0", optional = true }
rand = "0.9.2"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "apr1"
harness = false
