[package]
name = "crypt3_rs"
version = "0.1.1"
edition = "2024"
authors = [
  "Andrew Scott <imgurbot12@gmail.com>",
  "Ivan Nejgebauer <inejge@gmail.com>"
]

description = "Unix crypt(3) reimplemented in pure rust."
repository = "https://github.com/imgurbot12/crypt3"
documentation = "https://docs.rs/crypt3_rs/"

license = "MIT"
keywords = ["password", "hash", "hashing", "crypt"]
categories = ["cryptography", "authentication"]

[features]
default = ["apr1", "bcrypt", "bsdi", "md5", "sha1", "sha2", "unix"]
apr1    = ["md5", "dep:md-5"]
bcrypt  = ["dep:blowfish", "dep:byteorder"]
bsdi    = []
md5     = ["dep:md-5"]
sha1    = ["dep:hmac", "dep:sha1"]
sha2    = ["dep:sha2"]
unix    = []

[dependencies]
md-5 = { version = "0.10.6", optional = true }
sha1 = { version = "0.10.6", optional = true }
sha2 = { version = "0.10.9", optional = true }
blowfish = { version = "0.9.1", features = ["bcrypt"], optional = true }
hmac = { version = "0.12.1", optional = true }
byteorder = { version = "1.5.0", optional = true }
rand = "0.9"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "apr1"
harness = false
